[project]
name = "pth-attack-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Noai-oss", email = "jiuwoxiao@outlook.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["setuptools>=80.0.0"]

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "attack.pth" }]