[project]
name = "pth-attack-demo"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Noai-oss", email = "jiuwoxiao@outlook.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["setuptools>=80.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pth_attack_demo.__version__"}

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "attack.pth" }]